--- a/CS/HttpAPI/HttpAPI.csproj
+++ b/CS/HttpAPI/HttpAPI.csproj
@@ -69,9 +69,9 @@
         <ProgramIdTag>HttpAPI</ProgramIdTag>
         <SystemName>HttpAPI</SystemName>
         <Programmer />
-        <ArchiveFilename>C:\Users\brannon\Documents\Visual Studio 2008\Projects\HttpAPI\HttpAPI\bin\HttpAPI.clz</ArchiveFilename>
+        <ArchiveFilename>C:\Users\brannon\Documents\Visual Studio 2008\Projects\HttpAPI\Crestron-HttpAPI\CS\HttpAPI\bin\HttpAPI.clz</ArchiveFilename>
         <MinFirmwareVersion>1.007.0017</MinFirmwareVersion>
-        <CompiledOn>1/29/2015 6:55:44 AM</CompiledOn>
+        <CompiledOn>2/23/2015 6:43:01 AM</CompiledOn>
         <AdditionalInfo />
         <EmbedSourceArchive>False</EmbedSourceArchive>
         <CopyTo />
